# copyroom

./: .gitignore  README.md  REFACTORING_GUIDE.md  devenv.nix  devenv.yaml  pyproject.toml
.scratch/projects/01-concepting/: CONCEPT_REVIEW.md  COPIER_COPYROOM_CONCEPT.md  COPYROOM_CONCEPT.md  COPYROOM_CONCEPT_FINAL.md
.scratch/projects/02-implementation-planning/: COPYROOM_IMPLEMENTATION_PLAN.md
.scratch/projects/03-repo-adoption/: CONCEPT.md  IMPLEMENTATION_PLAN.md  README.md
.scratch/projects/04-v0.3.0-review-remediation/: CODE_REVIEW_REPORT.md  FIX_PROMPT.md  REFACTORING_GUIDE.md
.scratch/projects/05-deep-review-remediation/: CODE_REVIEW_REPORT.md  FIX_PROMPT.md  KICKOFF_PROMPT.md  REFACTORING_GUIDE.md
.scratch/specs/: copyroom-project.allium  copyroom-release.allium  copyroom-session.allium  copyroom-workshop.allium  copyroom.allium
demo/: __init__.py  walkthrough.sh
demo/fixtures/minimal-python-package/: copier.yml  demo-answers.yml
dev/: devenv.nix
docs/: README.md
docs/copier/: overview.md
docs/developer/: architecture.md  compat-layer.md  contributing.md  module-reference.md  state-machines.md  testing.md
docs/developer/decisions/: 0001-cli-command-structure.md
docs/user/: adoption.md  cli-reference.md  concepts.md  configuration.md  getting-started.md  projects.md  template-editing.md  trust-and-safety.md  workshop.md
modules/: copyroom.nix
src/copyroom/: __init__.py  __main__.py  cli.py
src/copyroom/_compat/: refs.py  (+10 more)
tests/integration/: __init__.py  conftest.py  test_cli.py  test_harness.py  test_inspect_status.py  test_manage.py  test_registry.py  test_template_edit.py  test_workflows.py
tests/spec/: README.md  __init__.py  conftest.py  test_invariants.py  test_project.py  test_release.py  test_session_lifecycle.py  test_workshop.py
tests/unit/: test_cli_messages.py  test_dispatcher.py  test_edits.py  test_manage.py  test_mode_detection.py  test_project_config.py  test_refs.py  test_release_check.py  test_semver.py  test_template.py
(+37 files in other folders)
