[project]
name = "copyroom"
version = "0.3.1"
description = "Mode-aware CLI for template-driven project workflows, built on Copier."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
  "pydantic>=2.12.5",
  "pyyaml>=6.0",
  "copier>=9.15.1,<10",
  "tomlkit>=0.13",
]

[project.scripts]
copyroom = "copyroom.cli:main"
demo = "demo:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "ruff>=0.5.0",
  "hypothesis>=6.0",
]

#[project.urls]
#homepage = "https://github.com/Bullish-Design/template-py"
#repository = "https://github.com/Bullish-Design/template-py.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copyroom", "demo"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]
# Keep the default behavior; this section is here so you can extend it later if needed.

[tool.pytest.ini_options]
addopts = "-q --cov=copyroom --cov-report=term-missing"
testpaths = ["tests"]

[tool.ty]
src = { include = ["tests/**"] }

[tool.ty.environment]
root = ["src"]
extra-paths = ["tests"]
python-version = "3.13"

[tool.ty.terminal]
error-on-warning = false

[tool.ty.analysis]
respect-type-ignore-comments = true

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]
"src/copyroom/_compat/**" = ["D", "ANN"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "hypothesis>=6.155.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

